Fix some spacing issues

--- a/client/app/less/brush-palette.less
+++ b/client/app/less/brush-palette.less
@@ -130,6 +130,9 @@
 			color: #494949;
 			padding-bottom: 6px;
 			margin: 0 5px;
+			@media screen and (max-width: @shrink-width) {
+				margin-bottom: 5px;
+			}
 			&:hover:not(.active) {
 				color: #333;
 			}
