--- a/client/app/less/mobile-canvas-page.less
+++ b/client/app/less/mobile-canvas-page.less
@@ -16,4 +16,8 @@
 		padding: 20px;
 		font-size: 18px;
 	}
+	.round-word {
+		right: 0;
+		left: @brush-palette-half-width;
+	}
 }
